# nodnod

./: .gitignore  main.py  main3.py  pyproject.toml  readme.md
.github/workflows/: tests.yml
nodnod/: __init__.py  box.py  compose.py  composer.py  error.py  node.py  node.pyi  scope.py  utils.py  value.py
nodnod/agent/: __init__.py  aio.py  base.py
nodnod/agent/event_loop/: agent.py  coroutine.py
nodnod/agent/layer/: agent.py  steps.py
nodnod/builder/: build.py  build_parallels.py  build_queue.py  readme.md  steps.py  validate_graph.py
nodnod/interface/: __init__.py  agent_from_node.py  cache.py  composable.py  compose_one.py  create_result_node.py  data.py  either.py  generic.py  inject.py  is_node.py  node_constructor.py  node_from_function.py  option_node.py  polymorphic.py  prepare_values.py  result_node.py  scalar.py  union_node.py
nodnod/utils/: aio.py  annotate.py  bundle.py  call.py  create_node.py  generator.py  injection.py  is_type.py  misc.py  prepare_values.py  repr_type.py  resolve_signature.py  type_args.py
tests/: conftest.py  test_agent_extended.py  test_aio_extended.py  test_annotate.py  test_build_queue.py  test_cache.py  test_call_with_context.py  test_compose.py  test_compose_one.py  test_coroutine.py  test_create_node_from_composable.py  test_create_result_node_extended.py  test_either.py  test_either_extended.py  test_error.py  test_generators.py  test_generic.py  test_get_injection_type.py  test_initialize_forward_refs.py  test_injection.py  test_is_type_extended.py  test_node_basic.py  test_node_constructor.py  test_node_extended.py  test_node_from_function.py  test_node_repr.py  test_option_node_extended.py  test_option_result_nodes.py  test_polymorphic.py  test_polymorphic_extended.py  test_prepare_values.py  test_regression_either_run.py  test_regression_function_union_misc.py  test_regression_node_meta.py  test_regression_scope_value.py  test_resolve_signature.py  test_resolve_signature_extended.py  test_result_node_extended.py  test_scalar.py  test_scope_extended.py  (+7 more)
