[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodnod"
version = "0.1.0"
description = "Programming in Python empowered with Nodes DI, implements efficient nodes computation agents and dependency scoping"
authors = [{ name = "timoniq" }]
requires-python = ">=3.13,<4.0"
readme = "readme.md"
dependencies = [
    "fntypes",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11,<1",
    "basedpyright>=1.31.3,<2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[tool.uv]
package = true

[tool.uv.sources]
fntypes = { git = "https://github.com/timoniq/fntypes", rev = "main" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 115
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM"
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
exclude = [".venv", ".idea", "docs"]

[tool.coverage.run]
omit = [
    "nodnod/agent/layer/*.py",
    "nodnod/builder/build_parallels.py",
]

[tool.coverage.report]
exclude_also = [
    "if __debug__",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
