[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodnod"
version = "0.1.0"
description = "Programming in Python empowered with Nodes DI, implements efficient nodes computation agents and dependency scoping"
authors = [{ name = "timoniq" }]
requires-python = ">=3.13,<4.0"
readme = "readme.md"
dependencies = [
  "typing-extensions>=4.15.0",
  "kungfu",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "basedpyright>=1.37.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true

[tool.uv.sources]
kungfu = { git = "https://github.com/timoniq/kungfu", rev = "main" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 115
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM"
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
exclude = [".venv", ".idea", "docs", "tests/**.py"]

[tool.coverage.run]
source = ["nodnod", "tests"]
omit = [
    "nodnod/agent/layer/*.py",
    "nodnod/builder/build_parallels.py",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __debug__",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "tests",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
